assets/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --plum: #b1a5a5;
  --black: #000000;
  --dutsty: #666166;
  --white: #FFFFFF;

}

body {
  background-color: var(--plum);
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  padding: 5%;
}


/* HEADER / NAV BAR STYLES START */

header {
  display: inline-block;
  margin: 0;
  padding: 20px 35px;
  background-color: var(--plum);
  z-index: 9999;
}

h1 {
  display: inline-block;
  justify-content: justify;
  align-content: center;
  font-weight: bold;
  margin: 0;
  padding: 0;
  font-size: 5.55vw;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  text-align: left;
  color:var(--plum);
}

header img {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: space-around;
  justify-content: left;
  max-width: 100%;
  max-height: 400px;
  border-radius: 50%;
  border: 3px solid var(--dutsty);
  margin: 30px auto 10px auto;
  }

.container {
  display: flex;
  align-items: flex-start;
  border-style: none;
  height: auto;
  width: auto;
  text-align: center;
  background-color: var(--dutsty);
  position: relative;
}

nav a {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  color: var(--secondary-color);
  font-weight: lighter;
  font-size: 3vw;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  text-decoration: underline;
  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
  padding-top: 20px;
  padding-bottom: 50px;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  list-style: none;
  position: sticky;
}

/*END -- HEADER / NAV STYLE SECTION*/

/*HERO SECTION*/

.hero img {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  background-size: cover;
  background-position: center;
  position: relative;
  max-height: 200px;
  }
  
/*END -- HERO SECTION*/

/*CONTENT SECTION*/

.content div {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  margin-bottom: 5px;
  padding-top: 50px;
  justify-content: left;
  align-items: left;
}

.sidebar {
  display: flex;
  flex-direction: column;
  font-size: 2vw;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  align-content: left;
}

.text-right {
  display: flex;
  flex-wrap: wrap;
  position: relative;
  padding-left: 100px;
  font-size: 1.55vw;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  text-align: justify;
}

.big img {
  width: 100%;
  border: 3px solid var(--dutsty);
}

.small img {
  clear: both;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-between;
  flex: 1;
  width: 25%;
  padding: 25px;
}


/*END CONTENT SECTION*/



/*FOOTER*/
.footer h2{
  font-weight: lighter;
  font-size: smaller;
  font-family: sans-serif;
  font-style: var(--tertiary-color);
  display: flex;
  flex-wrap: wrap;
  align-content: center;
}
/*END -- FOOTER*/

  
  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
  @media screen and (max-width: 980px) {
    header {
      justify-content: center;
      position: relative;
    }
  
    header h1 {
      width: 100%;
      border: none;
      background: var(--plum);
      color: var(--plum);
      text-align: center;
    }
  
    header nav ul {
      margin-top: 20px;
      width: 100%;
      justify-content: center;
    }
  
    header nav ul li a {
      font-size: 20px;
    }

    .content h2 {
      display: flex;
      margin-block-start: 2px;
      margin-block-end: 1em;
      margin-inline-start: 0px;
      margin-inline-end: 0px;
    }
    
    .content p {
      display: flex;
      flex-wrap: wrap;
      justify-content: right;
      align-items: right;
    }
  
    footer h2, footer div {
      text-align: center;
      width: 100%;
    }
  
  /* MEDIA QUERY FOR TABLETS AND SMALLER */
  @media screen and (max-width: 768px) {
    header {
      justify-content: center;
      position: relative;
    }
  
    header h1 {
      width: 100%;
      border: none;
      background: var(--plum);
      color: var(--plum);
      text-align: center;
    }
  
    header nav {
      margin-top: 20px;
      width: 100%;
      justify-content: center;
      font-size: 1.55vw;
    }
    
    .content h2 {
      display: flex;
      margin-block-start: 2px;
      margin-block-end: 1em;
      margin-inline-start: 0px;
      margin-inline-end: 0px;
    }
    
    .content p {
      display: flex;
      flex-wrap: wrap;
      justify-content: right;
      align-items: right;
    }
  
    footer h2, footer div {
      text-align: center;
      width: 100%;
    }
  }
  
  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
  @media screen and (max-width: 575px) {
    header {
      width: 100%;
    }

    h1 {
      width: 100%;
      font-size: 3vw;
      background: var(--plum);
      color: var(--plum);
      text-align: center;

    }
    .container {
      width: 95%;
    }

    header nav a {
      display: flex;
      flex-wrap: wrap;
      font-size: 2vw;
      margin-block-start: 1em;
      margin-block-end: 1em;
      margin-inline-start: 0px;
      margin-inline-end: 0px;
    }
  
    .about-me p {
      margin-top: 20px;
      display: inline-flex;
      margin-block-start: 1em;
      margin-block-end: 1em;
      margin-inline-start: 0px;
      margin-inline-end: 0px;
    }
  }
};

